fix: fixed title image alignment

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,10 @@
 .title {
   display: flex;
   justify-content: center;
+  
   img {
+    margin-right: 15px;
+    align-self: center;
     width: 60px;
     height: 60px;
   }
